@@ -38,6 +38,9 @@
 <p>2017-10-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/segment.c (InitializeIntervalTree): Fix SourceForge issue
+#507 &quot;null pointer in segment.c&quot; and issue #508 &quot;null pointer in
+segment.c&quot;.</li>
 <li>coders/topol.c (ReadTOPOLImage): Fix SourceForge issue #510
 &quot;null pointer and meory leak in topol.c&quot;.</li>
 <li>magick/widget.c (MagickXFileBrowserWidget): Fix SourceForge
